# homeassistant-powercalc

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  AGENTS.md  INFO.md  LICENSE  README.md  SECURITY.md  crowdin.yml  hacs.json  index.html  mypy.ini  pyproject.toml  renovate.json  requirements.dev.txt  requirements.test.txt
.github/: labeler.yml  pull_request_template.md  release-drafter-measure.yml  release-drafter.yml  zizmor.yaml
AB401130055/: model.json
contributing/: index.html
utils/measure/: .VERSION  .dockerignore  .env.dist  .gitignore  Dockerfile  README.md  config.py  const.py  interpolate_color_temp_csv.py  interpolate_hs_csv.py  measure.py  measure_hass.py  measure_kasa.py  measure_tasmota.py  measure_tuya.py  measure_util.py  prepare_app_release.py  pyproject.toml  requirements.txt  runDocker.BAT
utils/measure/.persistent/: .python_hue
utils/measure/controller/charging/: const.py  controller.py  dummy.py  factory.py  hass.py
utils/measure/controller/light/: const.py  errors.py  hass.py
utils/measure/controller/media/: controller.py  errors.py  hass.py
utils/measure/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
utils/measure/frontend/src/: api-client.test.ts  api-client.ts  app-controller.test.ts  app-controller.ts  main.ts  measurement-kinds.ts  styles.ts  types.ts
utils/measure/frontend/src/components/: app-shell.ts  power-meter-diagnostic.ts  preflight-view.ts  result-plot.ts  result-view.ts  running-view.ts  settings-view.ts  setup-view.ts  views.test.ts
utils/measure/home-assistant-app/: README.md  repository.yaml  validate.rb
utils/measure/home-assistant-app/powercalc_measure/: CHANGELOG.md  DOCS.md  README.md  apparmor.txt  config.yaml
utils/measure/home-assistant-app/powercalc_measure/translations/: en.yaml
utils/measure/light_controller/: const.py  controller.py  dummy.py  errors.py  factory.py  hass.py  hue.py
utils/measure/measure/: .gitignore  api.py  app.py  assembler.py  clock.py  config.py  configuration.py  const.py  coordinator.py  dummy_load.py  execution.py  home_assistant.py  home_assistant_entities.py  interactions.py  measure.py  model.py  request.py  service.py  session.py  settings.py  storage.py  tuning.py  version.py
utils/measure/measure/cli/: __init__.py  dummy_load.py  environment.py  interaction.py  main.py  measurements.py  questions.py  request_adapter.py
utils/measure/measure/contribution/: __init__.py  coordinator.py  credentials.py  files.py  github.py  models.py  pr_text.py  prepare.py
utils/measure/measure/controller/: answerable_protocol.py  errors.py  hass_controller.py  spec.py
utils/measure/measure/controller/charging/: const.py  controller.py  dummy.py  errors.py  factory.py  hass.py  spec.py
utils/measure/measure/controller/fan/: const.py  controller.py  dummy.py  factory.py  hass.py  spec.py
utils/measure/measure/controller/light/: capabilities.py  const.py  controller.py  dummy.py  errors.py  factory.py  hass.py  hue.py  spec.py
utils/measure/measure/controller/media/: const.py  controller.py  dummy.py  errors.py  factory.py  hass.py  spec.py
utils/measure/measure/ha_app/: __init__.py  api.py  contribution.py  coordinator.py  diagnostics.py  interaction.py  main.py  preferences.py  preflight.py  registry.py  service.py  session.py  shelly_discovery.py  storage.py
utils/measure/measure/ha_app/contribution/: __init__.py  coordinator.py  models.py  service.py
utils/measure/measure/ocr/: .gitignore  main.py  ocr.py  requirements.txt  run.sh
utils/measure/measure/powermeter/: const.py  diagnostics.py  dummy.py  errors.py  factory.py  hass.py  kasa.py  manual.py  mystrom.py  ocr.py  powermeter.py  shelly.py  shelly_client.py  spec.py  tasmota.py  tuya.py
utils/measure/measure/runner/: average.py  charging.py  const.py  fan.py  light.py  light_plan.py  recorder.py  runner.py  speaker.py
utils/measure/measure/util/: measure_util.py
utils/measure/measure/visualization/: __init__.py  cli.py  core.py  renderer.py
utils/measure/media_controller/: const.py  controller.py  dummy.py  errors.py  factory.py  hass.py
utils/measure/ocr/: .gitignore  main.py  ocr.py  requirements.txt  run.sh
utils/measure/playground/: test_phue.py  test_pyShelly.py  test_shellyPy.py  test_var.py
utils/measure/powermeter/: const.py  dummy.py  errors.py  factory.py  hass.py  kasa.py  manual.py  mystrom.py  ocr.py  powermeter.py  shelly.py  tasmota.py  tuya.py
utils/measure/runner/: average.py  charging.py  const.py  errors.py  light.py  recorder.py  runner.py  speaker.py
utils/measure/tests/: conftest.py  test_api.py  test_app.py  test_architecture.py  test_assembler.py  test_cli_dummy_load.py  test_cli_questions.py  test_config.py  test_contribution_coordinator.py  test_contribution_credentials.py  test_contribution_github.py  test_contribution_prepare.py  test_coordinator.py  test_diagnostics.py  test_execution.py  test_home_assistant.py  test_home_assistant_entities.py  test_measure.py  test_preflight.py  test_prepare_app_release.py  test_registry.py  test_request.py  test_request_adapter.py  test_service.py  test_session.py  test_shelly_discovery.py  test_storage.py  test_visualization.py  test_visualization_cli.py  test_visualization_renderer.py
utils/measure/tests/controller/: conftest.py
utils/measure/tests/controller/charging/: test_hass.py
utils/measure/tests/controller/fan/: test_hass.py
utils/measure/tests/controller/light/: test_capabilities.py  test_hass.py  test_hue.py
utils/measure/tests/powermeter/: test_diagnostics.py  test_hass.py  test_kasa.py  test_shelly.py
utils/measure/tests/runner/: test_charging.py  test_fan.py  test_light.py  test_manual_measurements.py  test_speaker.py
utils/measure/tests/util/: test_measure_util.py
utils/measure/util/: measure_util.py
utils/visualize/: .gitignore  LCB001.csv  LTG002.csv  README.md  compare.py  ct.csv  generate-all.sh  graph.py  miliskin.csv  plot.py  pyproject.toml  requirements.txt
utils/visualize/playground/: plotly-effect.py
(+2298 files in other folders)
