[project]
name = "Powercalc"
version = "0.1.0"
description = "Custom Home Assistant component for virtual power sensors"
maintainers = [
  { name = "Bram Gerritsen", email = "bgerritsen@gmail.com" },
]
keywords = [
  "homeassistant",
  "energy",
  "power",
  "custom-component",
  "custom-integration",
]
classifiers = [
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13.2,<4.0"
dependencies = ["homeassistant"]
license = "MIT"

[tool.pytest.ini_options]
testpaths = "tests"
norecursedirs = ".git"
asyncio_mode = "auto"
markers = [
    "skip_remote_loader_mocking: Do not mock globally registered remote loader mock",
]
log_level = "DEBUG"
asyncio_default_fixture_loop_scope = "function"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.13"
show_error_codes = true
follow_imports = "silent"
local_partial_types = true
strict_equality = true
no_implicit_optional = false
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "homeassistant.components.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "custom_components.powercalc.config_flow"
disable_error_code = "return-value"

[tool.coverage.paths]
source = ["custom_components/powercalc", "utils", "tests"]

[tool.ruff]
line-length = 150
target-version = "py313"
exclude = ["utils/measure/playground", "utils/visualize", ".github", "docs"]

[tool.ruff.lint]
select = ["A", "ANN", "ASYNC", "B", "BLE", "C", "C4", "COM", "E", "F", "FIX", "FURB", "G", "ICN", "I", "INP", "ISC", "LOG", "N", "NPY", "PERF", "PIE", "PYI", "Q", "RET", "RUF", "S", "SIM", "SLF", "SLOT", "T10", "T20", "TID", "UP", "W"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"utils/measure/**.py" = ["T201"]
"tests/**.py" = ["ASYNC230"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-git-revision-date-localized-plugin"
]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.13.0",
    "mypy==1.18.2",
    "voluptuous-stubs>=0.1",
    "homeassistant-stubs",
    "pytest-homeassistant-custom-component==0.13.281",
    "types-pytz>=2024.1",
    "types-croniter>=2.0",
    "croniter>=6.0.0",
    "aioresponses>=0.7.6",
    "pyturbojpeg>=1.8.2"
]

[tool.setuptools]
packages = ["custom_components"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.codespell]
ignore-words-list = 'hass'
check-filenames = true
skip = '*/translations/*.json,*/package-lock.json'
