[project]
name = "measure"
version = "0.1.0"
description = "Powercalc measurement tool"
authors = [
    {name = "Bram Gerritsen", email = "bgerritsen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aiohttp>=3.8",
    "chardet>=5.1",
    "charset-normalizer>=3.1",
    "homeassistant-api~=5.0",
    "inquirer>=3.1",
    "numpy>=2.2",
    "opencv-python>=4.7",
    "pytesseract>=0.3",
    "python-decouple>=3.4",
    "python-kasa>=0.6",
    "readchar>=4.0",
    "requests>=2.28",
    "tuyapower>=0.2",
    "typing-extensions>=4.6",
    "pycryptodome",
    "phue"
]

[tool.uv.sources]
phue = { git = "https://github.com/studioimaginaire/phue.git", rev = "f5c79ff07dafbaad155de6ca1cfd513705bbdbd3" }

[project.optional-dependencies]
dev = [
    "ruff>=0.2",
    "pytest>=8.3.3",
    "pytest-cov>=6.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["measure"]

[tool.pytest.ini_options]
pythonpath = "."
