[project]
name = "measure"
version = "0.1.0"
description = "Powercalc measurement tool"
authors = [
    {name = "Bram Gerritsen", email = "bgerritsen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "homeassistant-api~=6.0",
    "pydantic>=2.13",
    "requests>=2.28",
]

[project.optional-dependencies]
app = [
    "fastapi>=0.116",
    "uvicorn>=0.35",
]
cli = [
    "aiohue>=4.8.1,<5",
    "inquirer>=3.1",
    "pycryptodome>=3.20",
    "python-decouple>=3.4",
    "python-kasa>=0.7",
    "tuyapower>=0.2",
]
ocr = [
    "numpy>=2.4",
    "opencv-python-headless>=4.7",
    "pillow>=12.0",
    "pytesseract>=0.3",
]
dev = [
    "httpx2>=0.1",
    "mypy==2.3.0",
    "ruff>=0.2",
    "pytest>=8.3.3",
    "pytest-cov>=6.0"
]

[project.scripts]
powercalc-visualize = "measure.visualization.cli:main"

[dependency-groups]
visualize = [
    "matplotlib>=3.11",
]

[tool.uv]
prerelease = "allow"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["measure*"]

[tool.pytest.ini_options]
pythonpath = "."
