[tool.poetry]
name = "powercalc-visualize"
version = "0.1.0"
description = ""
authors = ["Bram <bgerritsen@emico.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
colour-science = "0.4.3"
contourpy = "^1.0"
cycler = "^0.11"
fonttools = "^4.38"
imageio = "^2.25"
kiwisolver = "^1.4"
matplotlib = "^3.6"
numpy = "*"
packaging = "^22.0"
pandas = "^1.5"
pillow = "^9.4"
pyparsing = "^3.0"
python-dateutil = "^2.8"
pytz = "2022.7"
scipy = "^1.12"
six = "^1.16"
typing-extensions = "^4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
