[project]
name = "powercalc-visualize"
version = "0.1.0"
description = ""
authors = [
    {name = "Bram Gerritsen", email = "bgerritsen@emico.nl"}
]
readme = "README.md"
requires-python = ">=3.13.0,<3.14"
dependencies = [
    "colour-science==0.4.7",
    "contourpy>=1.0",
    "cycler>=0.11",
    "fonttools>=4.38",
    "imageio>=2.25",
    "kiwisolver>=1.4",
    "matplotlib>=3.6",
    "numpy",
    "packaging>=22.0",
    "pandas>=2.2",
    "pillow>=11.0",
    "pyparsing>=3.0",
    "python-dateutil>=2.8",
    "pytz==2025.2",
    "scipy>=1.12",
    "six>=1.16",
    "typing-extensions>=4.5",
    "seaborn>=0.13.2",
    "plotly>=6.0.0"
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.12.0",
    "mypy==1.19.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
